//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id String [pk]
  customId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  name String
  phone String
  metadata Json [not null, default: '{}']
  sessions Session [not null]
  paymentMethodLinks UserPaymentMethodLink [not null]
  paymentAttemptLinks UserPaymentAttemptLink [not null]
  deviceLinks UserDeviceLink [not null]
  cardLinks UserCardLink [not null]
  ipAddressLinks UserIpAddressLink [not null]
}

Table UserFlow {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [unique, not null]
  sessions Session [not null]
  rules RuleToUserFlow [not null]
}

Table Session {
  id String [pk]
  customId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  userFlow UserFlow [not null]
  userFlowId String [not null]
  user User
  userId String
  deviceSnapshot DeviceSnapshot
  events Event [not null]
  evaluableActions EvaluableAction [not null]
}

Table EvaluableAction {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  transformsOutput Json
  riskLevel String
  isFraud Boolean [not null, default: false]
  session Session [not null]
  sessionId String [not null]
  paymentAttempt PaymentAttempt
  ruleExecutions RuleExecution [not null]
}

Table Event {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type String [not null]
  properties Json [not null, default: '{}']
  session Session [not null]
  sessionId String [not null]
}

Table DeviceSnapshot {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  sessionId String [unique, not null]
  session Session [not null]
  device Device [not null]
  deviceId String [not null]
  ipAddress IpAddress
  ipAddressId String
  fingerprint String
  userAgent String
  browserName String
  browserVersion String
  deviceModel String
  deviceType String
  deviceVendor String
  engineName String
  engineVersion String
  osName String
  osVersion String
  cpuArchitecture String
  isIncognito Boolean
  reqUserAgent String
  screenResolution String
  timezone String
  metadata Json [not null, default: '{}']
}

Table Device {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  deviceSnapshots DeviceSnapshot [not null]
  userLinks UserDeviceLink [not null]
  ipAddressLinks DeviceIpAddressLink [not null]
}

Table Location {
  id String [pk]
  latitude Float
  longitude Float
  cityGeonameId Int
  cityName String
  countryISOCode String
  countryName String
  postalCode String
  regionISOCode String
  regionName String
  ipAddresses IpAddress [not null]
  addresses Address [not null]
}

Table IpAddress {
  id String [pk]
  ipAddress String [unique, not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  location Location
  locationId String
  metadata Json [not null, default: '{}']
  deviceSnapshots DeviceSnapshot [not null]
  deviceLinks DeviceIpAddressLink [not null]
  userLinks UserIpAddressLink [not null]
  cardLinks CardIpAddressLink [not null]
  paymentAttemptLinks PaymentAttemptIpAddressLink [not null]
}

Table Address {
  id String [pk]
  city String
  country String
  line1 String
  line2 String
  postalCode String
  state String
  location Location
  locationId String
  paymentMethods PaymentMethod [not null]
  paymentAttempts PaymentAttempt [not null]
}

Table RuleSnapshot {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  description String
  tsCode String [not null]
  jsCode String [not null]
  riskLevel String [not null]
  rule Rule
  ruleId String
  currentRule Rule
  executions RuleExecution [not null]
}

Table Rule {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  currentRuleSnapshot RuleSnapshot [not null]
  currentRuleSnapshotId String [unique, not null]
  ruleSnapshots RuleSnapshot [not null]
  userFlows RuleToUserFlow [not null]
}

Table RuleToUserFlow {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  rule Rule [not null]
  ruleId String [not null]
  userFlow UserFlow [not null]
  userFlowId String [not null]

  indexes {
    (ruleId, userFlowId) [unique]
  }
}

Table RuleExecution {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  evaluableAction EvaluableAction [not null]
  evaluableActionId String [not null]
  ruleSnapshot RuleSnapshot [not null]
  ruleSnapshotId String [not null]
  result Boolean
  error String
  riskLevel String [not null]

  indexes {
    (evaluableActionId, ruleSnapshotId) [unique]
  }
}

Table List {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  name String [not null]
  alias String [unique, not null]
  regex String
  createdBy String [not null]
  items ListItem [not null]
}

Table ListItem {
  id String [pk]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  value String [not null]
  listId String [not null]
  list List [not null]
  createdBy String [not null]

  indexes {
    (listId, value) [unique]
  }
}

Table Card {
  id String [pk]
  fingerprint String [unique, not null]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  bin String
  brand String [not null]
  country String
  last4 String [not null]
  funding String
  issuer String
  expiryMonth Int
  expiryYear Int
  threeDSecureSupported Boolean
  paymentMethods PaymentMethod [not null]
  userLinks UserCardLink [not null]
  ipAddressLinks CardIpAddressLink [not null]
}

Table PaymentMethod {
  id String [pk]
  customId String [unique]
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  name String
  email String
  addressId String
  address Address
  cvcCheck String
  addressLine1Check String
  postalCodeCheck String
  card Card
  cardId String
  cardWallet String
  paymentAttempts PaymentAttempt [not null]
  userLink UserPaymentMethodLink
}

Table PaymentAttempt {
  id String [pk]
  customId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  amount Int [not null]
  currency String [not null]
  description String
  metadata Json [not null, default: '{}']
  evaluableAction EvaluableAction [not null]
  evaluableActionId String [unique, not null]
  outcome PaymentOutcome
  stripeReview StripePaymentReview
  paymentMethod PaymentMethod [not null]
  paymentMethodId String [not null]
  shippingName String
  shippingPhone String
  shippingAddress Address
  shippingAddressId String
  ipAddressLinks PaymentAttemptIpAddressLink [not null]
  userLink UserPaymentAttemptLink
}

Table StripePaymentReview {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  open Boolean [not null]
  reason String [not null]
  openedReason String [not null]
  closedReason String
  paymentAttempt PaymentAttempt [not null]
  paymentAttemptId String [unique, not null]
}

Table PaymentOutcome {
  id String [pk]
  customId String [unique]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  status PaymentOutcomeStatus [not null]
  stripeOutcome StripePaymentOutcome
  threeDSecureFlow String
  threeDSecureResult String
  threeDSecureResultReason String
  threeDSecureVersion String
  paymentAttempt PaymentAttempt [not null]
  paymentAttemptId String [unique, not null]
}

Table StripePaymentOutcome {
  id String [pk]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  networkStatus String
  reason String
  riskLevel String
  riskScore Int
  rule Json
  sellerMessage String
  type String
  paymentOutcome PaymentOutcome [not null]
  paymentOutcomeId String [unique, not null]
}

Table UserPaymentMethodLink {
  user User [not null]
  userId String [not null]
  paymentMethod PaymentMethod [not null]
  paymentMethodId String [unique, not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (paymentMethodId, userId) [pk]
  }
}

Table UserPaymentAttemptLink {
  user User [not null]
  userId String [not null]
  paymentAttempt PaymentAttempt [not null]
  paymentAttemptId String [unique, not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (paymentAttemptId, userId) [pk]
  }
}

Table UserDeviceLink {
  user User [not null]
  userId String [not null]
  device Device [not null]
  deviceId String [not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (deviceId, userId) [pk]
  }
}

Table UserCardLink {
  user User [not null]
  userId String [not null]
  card Card [not null]
  cardId String [not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (cardId, userId) [pk]
  }
}

Table UserIpAddressLink {
  user User [not null]
  userId String [not null]
  ipAddress IpAddress [not null]
  ipAddressId String [not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (userId, ipAddressId) [pk]
  }
}

Table PaymentAttemptIpAddressLink {
  paymentAttempt PaymentAttempt [not null]
  paymentAttemptId String [not null]
  ipAddress IpAddress [not null]
  ipAddressId String [not null]

  indexes {
    (paymentAttemptId, ipAddressId) [pk]
  }
}

Table DeviceIpAddressLink {
  deviceId String [not null]
  device Device [not null]
  ipAddressId String [not null]
  ipAddress IpAddress [not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (deviceId, ipAddressId) [pk]
  }
}

Table CardIpAddressLink {
  createdAt DateTime [default: `now()`, not null]
  cardId String [not null]
  card Card [not null]
  ipAddressId String [not null]
  ipAddress IpAddress [not null]
  firstSeen DateTime [not null]
  lastSeen DateTime [not null]

  indexes {
    (cardId, ipAddressId) [pk]
  }
}

Enum PaymentOutcomeStatus {
  SUCCEEDED
  FAILED
  PENDING
}

Ref: Session.userFlowId > UserFlow.id

Ref: Session.userId > User.id

Ref: EvaluableAction.sessionId > Session.id

Ref: Event.sessionId > Session.id

Ref: DeviceSnapshot.sessionId - Session.id

Ref: DeviceSnapshot.deviceId > Device.id

Ref: DeviceSnapshot.ipAddressId > IpAddress.id

Ref: IpAddress.locationId > Location.id

Ref: Address.locationId > Location.id

Ref: RuleSnapshot.ruleId - Rule.id

Ref: Rule.currentRuleSnapshotId - RuleSnapshot.id

Ref: RuleToUserFlow.ruleId > Rule.id

Ref: RuleToUserFlow.userFlowId > UserFlow.id

Ref: RuleExecution.evaluableActionId > EvaluableAction.id

Ref: RuleExecution.ruleSnapshotId > RuleSnapshot.id

Ref: ListItem.listId > List.id

Ref: PaymentMethod.addressId > Address.id

Ref: PaymentMethod.cardId > Card.id

Ref: PaymentAttempt.evaluableActionId - EvaluableAction.id

Ref: PaymentAttempt.paymentMethodId > PaymentMethod.id

Ref: PaymentAttempt.shippingAddressId > Address.id

Ref: StripePaymentReview.paymentAttemptId - PaymentAttempt.id

Ref: PaymentOutcome.paymentAttemptId - PaymentAttempt.id

Ref: StripePaymentOutcome.paymentOutcomeId - PaymentOutcome.id

Ref: UserPaymentMethodLink.userId > User.id

Ref: UserPaymentMethodLink.paymentMethodId - PaymentMethod.id

Ref: UserPaymentAttemptLink.userId > User.id

Ref: UserPaymentAttemptLink.paymentAttemptId - PaymentAttempt.id

Ref: UserDeviceLink.userId > User.id

Ref: UserDeviceLink.deviceId > Device.id

Ref: UserCardLink.userId > User.id

Ref: UserCardLink.cardId > Card.id

Ref: UserIpAddressLink.userId > User.id

Ref: UserIpAddressLink.ipAddressId > IpAddress.id

Ref: PaymentAttemptIpAddressLink.paymentAttemptId > PaymentAttempt.id

Ref: PaymentAttemptIpAddressLink.ipAddressId > IpAddress.id

Ref: DeviceIpAddressLink.deviceId > Device.id

Ref: DeviceIpAddressLink.ipAddressId > IpAddress.id

Ref: CardIpAddressLink.cardId > Card.id

Ref: CardIpAddressLink.ipAddressId > IpAddress.id